--- a/mdr.env
+++ b/mdr.env
@@ -37,8 +37,8 @@ BIOPORTAL_URL=https://data.bioontology.org
 LOGSPOUT=ignore
 WEBDAV_DOWNLOAD_URL=download.${RIT_ENV}.dh.unimaas.nl
 WEBDAV_UPLOAD_URL=upload.${RIT_ENV}.dh.unimaas.nl
-JIRA_URL=https://mumc.atlassian.net
-JIRA_PROJECT_KEY=DHDOSB
+JIRA_URL=https://mumc-sandbox.atlassian.net
+JIRA_PROJECT_KEY=DHDO
 DATAHUB_HOME_URL=http://${RIT_ENV}.dh.unimaas.nl
 MDR_HOME_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
 
