Add docker-dev changes for Ubuntu Davrods [DHDO-1438]

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ENV_IRODS_REST_VERSION=4.1.10.0-RC1
 
 # DavRODS
 ENV_DAVRODS_IRODS_VERSION=4.2.12
-ENV_DAVRODS_VERSION=4.2.12_1.5.0
+ENV_DAVRODS_VERSION=1.5.1
 
 # MDR
 ENV_RULE_WRAPPER_VERSION=2023.4
