Add MDR CSP variable for help center and keycloak [DHDO-1552]

--- a/mdr.env
+++ b/mdr.env
@@ -66,3 +66,6 @@ DRAG_AND_DROP_MAX_SIZE=50
 # Help-center
 HELP_CENTER_HOST=http://help.mdr.${RIT_ENV}.dh.unimaas.nl
 
+# CSP
+CSP_CONNECT_SRC_HELP_CENTER=help.mdr.${RIT_ENV}.dh.unimaas.nl
+CSP_FORM_ACTION_KEYCLOAK=keycloak.${RIT_ENV}.dh.unimaas.nl
