Add external to dh_public network [DHDO-834]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -441,6 +441,7 @@ networks:
       driver: default
       config:
         - subnet: "172.22.1.0/24"
+    external: true
 
 volumes:
   static_content:
