Add hostname to db [DHDO-1676]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -373,6 +373,7 @@ services:
       context: externals/dh-admin-tools/db
       dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/admin-tools-db:${ENV_TAG}
+    hostname: admin-tools-db
     volumes:
       - admin_db_data:/var/lib/postgresql/data
       - /etc/localtime:/etc/localtime:ro
