Updates for AdminTools OIDC [DHDO-1899]

--- a/.env
+++ b/.env
@@ -78,3 +78,8 @@ ENV_HC_BACKEND_URL=http://help.mdr.${RIT_ENV}.dh.unimaas.nl
 ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
 
 ENV_DEBUG_DH_BOOTSTRAP="no"
+
+# OIDC Configuration for admintools
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+SECRET_KEY=randomly_generated_secret_key
